if dir else create

--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5f9e1aa65a012d17335dab98474beb56b0543bb763c50acc59929da07907aa0e"
+  "signature": "sha256:8c5f49c5186ab09fabe75426e9eb8a4f1948eb79d8d6cff832602c5489cb3d8a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -348,23 +348,26 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "os.mkdir(imgzdir + yearz)"
+      "if os.path.isdir(imgzdir + yearz) = True:\n",
+      "    print 'its true'\n",
+      "else:\n",
+      "    print 'its false'\n",
+      "\n",
+      "#os.mkdir(imgzdir + yearz)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "OSError",
-       "evalue": "[Errno 17] File exists: '/home/wcmckee/getsdrawndotcom/imgs/14'",
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-145-dfe11d89023e>, line 1)",
        "output_type": "pyerr",
        "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-139-a883f5764c9b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimgzdir\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0myearz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mOSError\u001b[0m: [Errno 17] File exists: '/home/wcmckee/getsdrawndotcom/imgs/14'"
+        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-145-dfe11d89023e>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    if os.path.isdir(imgzdir + yearz) = True:\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
        ]
       }
      ],
-     "prompt_number": 139
+     "prompt_number": 145
     },
     {
      "cell_type": "code",
