--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8c5f49c5186ab09fabe75426e9eb8a4f1948eb79d8d6cff832602c5489cb3d8a"
+  "signature": "sha256:6b808f91aa33460a2e2dcf654654212d98f5c2f8b86fe3be42196f6981b6ba2e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -72,7 +72,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 143
+     "prompt_number": 158
     },
     {
      "cell_type": "code",
@@ -83,7 +83,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 144
+     "prompt_number": 159
     },
     {
      "cell_type": "code",
@@ -94,7 +94,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 81
+     "prompt_number": 160
     },
     {
      "cell_type": "code",
@@ -105,7 +105,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 82
+     "prompt_number": 161
     },
     {
      "cell_type": "code",
@@ -116,7 +116,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 83
+     "prompt_number": 162
     },
     {
      "cell_type": "code",
@@ -127,7 +127,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 84
+     "prompt_number": 163
     },
     {
      "cell_type": "code",
@@ -141,7 +141,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 85
+     "prompt_number": 164
     },
     {
      "cell_type": "code",
@@ -152,7 +152,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 86
+     "prompt_number": 165
     },
     {
      "cell_type": "code",
@@ -165,7 +165,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 87
+     "prompt_number": 166
     },
     {
      "cell_type": "code",
@@ -177,7 +177,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 88
+     "prompt_number": 167
     },
     {
      "cell_type": "code",
@@ -188,7 +188,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 89
+     "prompt_number": 168
     },
     {
      "cell_type": "code",
@@ -209,7 +209,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 90
+     "prompt_number": 169
     },
     {
      "cell_type": "code",
@@ -220,7 +220,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 99
+     "prompt_number": 170
     },
     {
      "cell_type": "code",
@@ -231,7 +231,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 100
+     "prompt_number": 171
     },
     {
      "cell_type": "code",
@@ -242,7 +242,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 101
+     "prompt_number": 172
     },
     {
      "cell_type": "code",
@@ -254,7 +254,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 102
+     "prompt_number": 173
     },
     {
      "cell_type": "code",
@@ -267,7 +267,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 103
+     "prompt_number": 174
     },
     {
      "cell_type": "code",
@@ -278,7 +278,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 104
+     "prompt_number": 175
     },
     {
      "cell_type": "code",
@@ -289,7 +289,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 107
+     "prompt_number": 176
     },
     {
      "cell_type": "code",
@@ -300,7 +300,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 111
+     "prompt_number": 177
     },
     {
      "cell_type": "code",
@@ -311,7 +311,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 115
+     "prompt_number": 178
     },
     {
      "cell_type": "code",
@@ -328,7 +328,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 129
+     "prompt_number": 179
     },
     {
      "cell_type": "code",
@@ -342,65 +342,80 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 138
+     "prompt_number": 180
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if os.path.isdir(imgzdir + yearz) = True:\n",
+      "if os.path.isdir(imgzdir + yearz) == True:\n",
       "    print 'its true'\n",
       "else:\n",
       "    print 'its false'\n",
+      "    os.mkdir(imgzdir + yearz)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "its true\n"
+       ]
+      }
+     ],
+     "prompt_number": 181
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "if os.path.isdir(monzpath) == True:\n",
+      "    print 'its true'\n",
+      "else:\n",
+      "    print 'its false'\n",
+      "    os.mkdir(monzpath)\n",
       "\n",
-      "#os.mkdir(imgzdir + yearz)"
+      "#os.mkdir(monzpath)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "SyntaxError",
-       "evalue": "invalid syntax (<ipython-input-145-dfe11d89023e>, line 1)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-145-dfe11d89023e>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    if os.path.isdir(imgzdir + yearz) = True:\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "its true\n"
        ]
       }
      ],
-     "prompt_number": 145
+     "prompt_number": 182
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "os.mkdir(monzpath)"
+      "if os.path.isdir(dayzpath) == True:\n",
+      "    print 'its true'\n",
+      "else:\n",
+      "    print 'its false'\n",
+      "    os.mkdir(dayzpath)\n",
+      "\n",
+      "#os.mkdir(dayzpath)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "OSError",
-       "evalue": "[Errno 17] File exists: '/home/wcmckee/getsdrawndotcom/imgs/14/12'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-141-815c405824a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmonzpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mOSError\u001b[0m: [Errno 17] File exists: '/home/wcmckee/getsdrawndotcom/imgs/14/12'"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "its true\n"
        ]
       }
      ],
-     "prompt_number": 141
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "os.mkdir(dayzpath)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 142
+     "prompt_number": 183
     },
     {
      "cell_type": "code",
@@ -414,7 +429,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 113,
+       "prompt_number": 184,
        "text": [
         "['ravensymoneislife-line.png',\n",
         " 'RunOttawa613-bw.png',\n",
@@ -499,6 +514,7 @@
         " 'THORGNASH-colour.png',\n",
         " 'MrsEvil-colour.png',\n",
         " 'iamwolf777-bw.png',\n",
+        " '14',\n",
         " 'ofalco-bw.png',\n",
         " 'jerrytt-bw.png',\n",
         " 'OhGollyG-bw.png',\n",
@@ -507,6 +523,7 @@
         " 'arequest554-bw.png',\n",
         " 'Se7enOne-colour.png',\n",
         " 'iamwolf777-colour.png',\n",
+        " '12',\n",
         " 'Quackattackaggie-line.png',\n",
         " 'Jasperthecat77-bw.png',\n",
         " 'OhLydia-bw.png',\n",
@@ -563,7 +580,7 @@
        ]
       }
      ],
-     "prompt_number": 113
+     "prompt_number": 184
     },
     {
      "cell_type": "code",
@@ -574,7 +591,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 112
+     "prompt_number": 185
     },
     {
      "cell_type": "code",
@@ -586,7 +603,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 69
+     "prompt_number": 186
     },
     {
      "cell_type": "code",
@@ -599,7 +616,112 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 70
+     "prompt_number": 187
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "os.chdir(dayzpath)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 188
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "os.listdir(dayzpath)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 192,
+       "text": [
+        "['jenniferjulieann-bw.png',\n",
+        " 'Kmo78-colour.png',\n",
+        " 'DeuceIsWild-bw.png',\n",
+        " 'rj198706-bw.png',\n",
+        " 'DisfunkyMonkey-line.png',\n",
+        " 'Bdubsss-line.png',\n",
+        " 'gowronatemybaby7-bw.png',\n",
+        " 'Billy_Chaos-bw.png',\n",
+        " 'tejaa-colour.png',\n",
+        " 'gowronatemybaby7-colour.png',\n",
+        " 'Nicole12493-bw.png',\n",
+        " 'BigFatG-line.png',\n",
+        " 'lockandkey23-line.png',\n",
+        " 'BigFatG-colour.png',\n",
+        " 'Billy_Chaos-line.png',\n",
+        " 'gvallance-bw.png',\n",
+        " 'butchyjohnson-bw.png',\n",
+        " 'MadSteel-colour.png',\n",
+        " 'BigFatG-bw.png',\n",
+        " 'briba-bw.png',\n",
+        " 'dr0ffig-colour.png',\n",
+        " 'MadSteel-line.png',\n",
+        " 'gvallance-colour.png',\n",
+        " 'paulccole-line.png',\n",
+        " 'rj198706-colour.png',\n",
+        " 'dr0ffig-line.png',\n",
+        " 'MadSteel-bw.png',\n",
+        " 'paulccole-bw.png',\n",
+        " 'davidisabeersnob-colour.png',\n",
+        " 'CaptainReallyNigga-colour.png',\n",
+        " 'tejaa-bw.png',\n",
+        " 'DisfunkyMonkey-bw.png',\n",
+        " 'Bdubsss-colour.png',\n",
+        " 'tildeathdowe-line.png',\n",
+        " 'gvallance-line.png',\n",
+        " 'tejaa-line.png',\n",
+        " 'rj198706-line.png',\n",
+        " 'Nicole12493-line.png',\n",
+        " 'dr0ffig-bw.png',\n",
+        " 'DeuceIsWild-line.png',\n",
+        " 'BKLC-line.png',\n",
+        " 'alexdagreat15-bw.png',\n",
+        " 'briba-line.png',\n",
+        " 'alexdagreat15-line.png',\n",
+        " 'BKLC-colour.png',\n",
+        " 'butchyjohnson-colour.png',\n",
+        " 'gowronatemybaby7-line.png',\n",
+        " 'davidisabeersnob-bw.png',\n",
+        " 'lockandkey23-colour.png',\n",
+        " 'tildeathdowe-colour.png',\n",
+        " 'Kmo78-line.png',\n",
+        " 'Billy_Chaos-colour.png',\n",
+        " 'davidisabeersnob-line.png',\n",
+        " 'Nicole12493-colour.png',\n",
+        " 'DeuceIsWild-colour.png',\n",
+        " 'CaptainReallyNigga-bw.png',\n",
+        " 'Bdubsss-bw.png',\n",
+        " 'lockandkey23-bw.png',\n",
+        " 'RileyByrdie-colour.png',\n",
+        " 'tildeathdowe-bw.png',\n",
+        " 'PetrichorEnigma-bw.png',\n",
+        " 'BKLC-bw.png',\n",
+        " 'jenniferjulieann-colour.png',\n",
+        " 'butchyjohnson-line.png',\n",
+        " 'PetrichorEnigma-line.png',\n",
+        " 'RileyByrdie-bw.png',\n",
+        " 'CaptainReallyNigga-line.png',\n",
+        " 'jenniferjulieann-line.png',\n",
+        " 'alexdagreat15-colour.png',\n",
+        " 'Kmo78-bw.png',\n",
+        " 'DisfunkyMonkey-colour.png',\n",
+        " 'paulccole-colour.png',\n",
+        " 'PetrichorEnigma-colour.png',\n",
+        " 'briba-colour.png',\n",
+        " 'RileyByrdie-line.png']"
+       ]
+      }
+     ],
+     "prompt_number": 192
     },
     {
      "cell_type": "code",
@@ -621,29 +743,172 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 71
+     "prompt_number": 190
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "os.lisdir('/home/wcmckee/getsdrawndotcom/imgs')"
+      "os.listdir('/home/wcmckee/getsdrawndotcom/imgs')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "AttributeError",
-       "evalue": "'module' object has no attribute 'lisdir'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-78-d23b40ae2c56>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlisdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'/home/wcmckee/getsdrawndotcom/imgs'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mAttributeError\u001b[0m: 'module' object has no attribute 'lisdir'"
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 191,
+       "text": [
+        "['ravensymoneislife-line.png',\n",
+        " 'RunOttawa613-bw.png',\n",
+        " 'fuzz_e_bear-colour.png',\n",
+        " 'fuzz_e_bear-bw.png',\n",
+        " 'iloveariiii-line.png',\n",
+        " 'plainclotheswoman-bw.png',\n",
+        " 'alikonagurl83-line.png',\n",
+        " 'starienite-colour.png',\n",
+        " 'neszero-line.png',\n",
+        " 'OrangeCloud-line.png',\n",
+        " 'JEWPACOLYPSE-line.png',\n",
+        " 'OhGollyG-line.png',\n",
+        " 'JoisofLife-bw.png',\n",
+        " 'alikonagurl83-colour.png',\n",
+        " 'DemTurtlesCom-line.png',\n",
+        " 'ravensymoneislife-bw.png',\n",
+        " 'sirenmika-bw.png',\n",
+        " 'lordneojoker-bw.png',\n",
+        " 'Quackattackaggie-bw.png',\n",
+        " 'youwinabagel-line.png',\n",
+        " 'iloveariiii-bw.png',\n",
+        " 'THORGNASH-bw.png',\n",
+        " 'Salerno1717-bw.png',\n",
+        " 'shripityshripit-bw.png',\n",
+        " 'ofalco-colour.png',\n",
+        " 'youwinabagel-colour.png',\n",
+        " 'Imbie81-colour.png',\n",
+        " 'Se7enOne-line.png',\n",
+        " 'youwinabagel-bw.png',\n",
+        " 'JEWPACOLYPSE-colour.png',\n",
+        " 'seahorseVT-bw.png',\n",
+        " 'celest123-line.png',\n",
+        " 'The_Beaner-bw.png',\n",
+        " 'arequest554-line.png',\n",
+        " 'MrsEvil-bw.png',\n",
+        " 'GymIsFun-bw.png',\n",
+        " 'TD2705-colour.png',\n",
+        " 'iamwolf777-line.png',\n",
+        " 'RunOttawa613-colour.png',\n",
+        " 'uhhhname-bw.png',\n",
+        " 'RunOttawa613-line.png',\n",
+        " 'sirenmika-colour.png',\n",
+        " 'ghoztcum-line.png',\n",
+        " 'labatomi-bw.png',\n",
+        " 'OhGollyG-colour.png',\n",
+        " 'lordneojoker-colour.png',\n",
+        " 'shripityshripit-line.png',\n",
+        " 'GymIsFun-line.png',\n",
+        " 'BonAnchovy-bw.png',\n",
+        " 'labatomi-line.png',\n",
+        " 'ofalco-line.png',\n",
+        " 'neszero-bw.png',\n",
+        " 'BonAnchovy-colour.png',\n",
+        " 'THORGNASH-line.png',\n",
+        " 'Mailing_a_Bear-colour.png',\n",
+        " 'REALchampagnePAPI-colour.png',\n",
+        " 'REALchampagnePAPI-bw.png',\n",
+        " 'JEWPACOLYPSE-bw.png',\n",
+        " 'bulgarianutter-colour.png',\n",
+        " 'plainclotheswoman-colour.png',\n",
+        " 'GymIsFun-colour.png',\n",
+        " 'LongDistanceGuyy-line.png',\n",
+        " 'CapDance-bw.png',\n",
+        " 'iloveariiii-colour.png',\n",
+        " 'ravensymoneislife-colour.png',\n",
+        " 'OhLydia-colour.png',\n",
+        " 'OrangeCloud-bw.png',\n",
+        " 'crayolalightblue-bw.png',\n",
+        " '_jazmin-bw.png',\n",
+        " 'DemTurtlesCom-bw.png',\n",
+        " 'BeyondMars-colour.png',\n",
+        " 'crayolalightblue-colour.png',\n",
+        " 'uhhhname-line.png',\n",
+        " 'The_Beaner-line.png',\n",
+        " 'MrsEvil-line.png',\n",
+        " 'crayolalightblue-line.png',\n",
+        " 'CapDance-colour.png',\n",
+        " 'JoisofLife-colour.png',\n",
+        " 'BeyondMars-bw.png',\n",
+        " 'Mailing_a_Bear-bw.png',\n",
+        " 'THORGNASH-colour.png',\n",
+        " 'MrsEvil-colour.png',\n",
+        " 'iamwolf777-bw.png',\n",
+        " '14',\n",
+        " 'ofalco-bw.png',\n",
+        " 'jerrytt-bw.png',\n",
+        " 'OhGollyG-bw.png',\n",
+        " 'Imbie81-bw.png',\n",
+        " 'fuzz_e_bear-line.png',\n",
+        " 'arequest554-bw.png',\n",
+        " 'Se7enOne-colour.png',\n",
+        " 'iamwolf777-colour.png',\n",
+        " '12',\n",
+        " 'Quackattackaggie-line.png',\n",
+        " 'Jasperthecat77-bw.png',\n",
+        " 'OhLydia-bw.png',\n",
+        " 'Se7enOne-bw.png',\n",
+        " 'sirenmika-line.png',\n",
+        " 'lordneojoker-line.png',\n",
+        " 'LongDistanceGuyy-colour.png',\n",
+        " 'jerrytt-colour.png',\n",
+        " 'Dreababii-bw.png',\n",
+        " 'BeyondMars-line.png',\n",
+        " 'ghoztcum-bw.png',\n",
+        " 'uhhhname-colour.png',\n",
+        " '_jazmin-colour.png',\n",
+        " 'alikonagurl83-bw.png',\n",
+        " 'AdamBarnhouse-colour.png',\n",
+        " 'Quackattackaggie-colour.png',\n",
+        " 'Jasperthecat77-line.png',\n",
+        " 'The_Beaner-colour.png',\n",
+        " 'starienite-line.png',\n",
+        " 'jerrytt-line.png',\n",
+        " 'Salerno1717-colour.png',\n",
+        " 'Salerno1717-line.png',\n",
+        " 'Dreababii-line.png',\n",
+        " 'LongDistanceGuyy-bw.png',\n",
+        " 'seahorseVT-line.png',\n",
+        " 'OhLydia-line.png',\n",
+        " 'AdamBarnhouse-bw.png',\n",
+        " 'Dreababii-colour.png',\n",
+        " 'celest123-bw.png',\n",
+        " 'labatomi-colour.png',\n",
+        " 'starienite-bw.png',\n",
+        " 'OrangeCloud-colour.png',\n",
+        " 'ghoztcum-colour.png',\n",
+        " 'neszero-colour.png',\n",
+        " 'REALchampagnePAPI-line.png',\n",
+        " 'DemTurtlesCom-colour.png',\n",
+        " 'BonAnchovy-line.png',\n",
+        " 'bulgarianutter-line.png',\n",
+        " 'TD2705-line.png',\n",
+        " 'Jasperthecat77-colour.png',\n",
+        " 'Imbie81-line.png',\n",
+        " 'CapDance-line.png',\n",
+        " 'seahorseVT-colour.png',\n",
+        " 'JoisofLife-line.png',\n",
+        " 'plainclotheswoman-line.png',\n",
+        " '_jazmin-line.png',\n",
+        " 'Mailing_a_Bear-line.png',\n",
+        " 'TD2705-bw.png',\n",
+        " 'arequest554-colour.png',\n",
+        " 'shripityshripit-colour.png',\n",
+        " 'bulgarianutter-bw.png',\n",
+        " 'celest123-colour.png',\n",
+        " 'AdamBarnhouse-line.png']"
        ]
       }
      ],
-     "prompt_number": 78
+     "prompt_number": 191
     },
     {
      "cell_type": "code",
