--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:737f7689cf20dc4f42f26c0be09febe959eeb666547d26622f1ba8391b894dd5"
+  "signature": "sha256:4fb7bce57d0210d13992a037e5852cf4ae21058262b55e12092c0bb48d2da1ee"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,7 +43,13 @@
       "\n",
       "Currently saves username-line-bw-colour.png to imgs folder. Instead get it to save to imgs/year/month/day/usernames.png.\n",
       "Script checks the year/month/day and if folder isnt created, it creates it. If folder is there, exit. \n",
-      "Maybe get the reference image and save it with the line/bw/color.pngs\n"
+      "Maybe get the reference image and save it with the line/bw/color.pngs\n",
+      "\n",
+      "The script now filters the jpeg and png image and skips links to imgur pages. This needs to be fixed by getting the images from the imgur pages.\n",
+      "It renames the image files to the redditor username followed by a -reference tag (and ending with png of course).\n",
+      "It opens these files up with PIL and checks the sizes. \n",
+      "It needs to resize the images that are larger than 800px to 800px.\n",
+      "These images need to be linked in the index.html instead of the imgur altenatives. \n"
      ]
     },
     {
