--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4fb7bce57d0210d13992a037e5852cf4ae21058262b55e12092c0bb48d2da1ee"
+  "signature": "sha256:48b8014b241771cc31c9902654f883ece972e6f7e26f38cfced19c1c48258411"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -79,7 +79,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 44
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
@@ -90,7 +90,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 45
+     "prompt_number": 55
     },
     {
      "cell_type": "code",
@@ -101,7 +101,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 56
     },
     {
      "cell_type": "code",
@@ -112,7 +112,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 47
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
@@ -123,7 +123,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 48
+     "prompt_number": 58
     },
     {
      "cell_type": "code",
@@ -134,7 +134,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 49
+     "prompt_number": 59
     },
     {
      "cell_type": "code",
@@ -148,7 +148,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 50
+     "prompt_number": 60
     },
     {
      "cell_type": "code",
@@ -159,7 +159,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 51
+     "prompt_number": 61
     },
     {
      "cell_type": "code",
@@ -172,7 +172,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 52
+     "prompt_number": 62
     },
     {
      "cell_type": "code",
@@ -184,7 +184,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 53
+     "prompt_number": 63
     },
     {
      "cell_type": "code",
@@ -195,7 +195,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 54
+     "prompt_number": 64
     },
     {
      "cell_type": "code",
@@ -216,7 +216,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 55
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
@@ -227,7 +227,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 56
+     "prompt_number": 66
     },
     {
      "cell_type": "code",
@@ -238,7 +238,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 57
+     "prompt_number": 67
     },
     {
      "cell_type": "code",
@@ -249,7 +249,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 58
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
@@ -261,7 +261,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 59
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
@@ -274,7 +274,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 60
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
@@ -285,7 +285,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 61
+     "prompt_number": 71
     },
     {
      "cell_type": "code",
@@ -296,7 +296,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 62
+     "prompt_number": 72
     },
     {
      "cell_type": "code",
@@ -307,7 +307,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 73
     },
     {
      "cell_type": "code",
@@ -318,7 +318,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 74
     },
     {
      "cell_type": "code",
@@ -335,7 +335,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
@@ -351,7 +351,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 79
+     "prompt_number": 76
     },
     {
      "cell_type": "code",
@@ -368,7 +368,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 80
+     "prompt_number": 77
     },
     {
      "cell_type": "code",
@@ -387,7 +387,7 @@
        ]
       }
      ],
-     "prompt_number": 81
+     "prompt_number": 78
     },
     {
      "cell_type": "code",
@@ -402,7 +402,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 65
+     "prompt_number": 79
     },
     {
      "cell_type": "code",
@@ -427,7 +427,7 @@
        ]
       }
      ],
-     "prompt_number": 66
+     "prompt_number": 80
     },
     {
      "cell_type": "code",
@@ -452,7 +452,7 @@
        ]
       }
      ],
-     "prompt_number": 67
+     "prompt_number": 81
     },
     {
      "cell_type": "code",
@@ -471,11 +471,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "its false\n"
+        "its true\n"
        ]
       }
      ],
-     "prompt_number": 84
+     "prompt_number": 82
     },
     {
      "cell_type": "code",
@@ -494,11 +494,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "its false\n"
+        "its true\n"
        ]
       }
      ],
-     "prompt_number": 86
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
@@ -509,7 +509,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 87
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
@@ -520,7 +520,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 88
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
@@ -532,7 +532,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 89
+     "prompt_number": 86
     },
     {
      "cell_type": "code",
@@ -545,7 +545,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 90
+     "prompt_number": 87
     },
     {
      "cell_type": "code",
@@ -556,7 +556,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -567,7 +568,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 91
+     "prompt_number": 89
     },
     {
      "cell_type": "code",
@@ -581,13 +582,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 95,
+       "prompt_number": 90,
        "text": [
         "'/home/wcmckee/getsdrawndotcom/imgs/14/12/20/art'"
        ]
       }
      ],
-     "prompt_number": 95
+     "prompt_number": 90
     },
     {
      "cell_type": "code",
@@ -598,7 +599,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 93
+     "prompt_number": 91
     },
     {
      "cell_type": "code",
@@ -620,7 +621,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 94
+     "prompt_number": 92
     },
     {
      "cell_type": "code",
@@ -634,7 +635,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 75,
+       "prompt_number": 93,
        "text": [
         "['ravensymoneislife-line.png',\n",
         " 'RunOttawa613-bw.png',\n",
@@ -785,7 +786,7 @@
        ]
       }
      ],
-     "prompt_number": 75
+     "prompt_number": 93
     },
     {
      "cell_type": "code",
@@ -795,41 +796,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 35,
-       "text": [
-        "['elcielo17',\n",
-        " 'HoustonSoda2',\n",
-        " 'Cfar1994',\n",
-        " 'DoctorCrouchJrWho',\n",
-        " 'EPICsandwich225',\n",
-        " 'Tjalle60',\n",
-        " 'ChrisTaliaferro',\n",
-        " 'kayleemarie4386',\n",
-        " 'guurrllgetit',\n",
-        " 'greengal500',\n",
-        " 'anatomicallystuffed',\n",
-        " 'sundaylou',\n",
-        " 'rh0xx0rpwn3r98',\n",
-        " 'TTG_Zebra_Donkey',\n",
-        " 'RainyWeathers',\n",
-        " 'esmit438',\n",
-        " 'makebelievepoet',\n",
-        " 'Thepinkcursader',\n",
-        " 'pokewneedle',\n",
-        " 'dannydeforest',\n",
-        " 'ItWillBeMine',\n",
-        " 'Redchubs',\n",
-        " 'chet_lemon_party',\n",
-        " 'ilzdog',\n",
-        " 'Slay3rKenzie']"
-       ]
-      }
-     ],
-     "prompt_number": 35
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -848,17 +815,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 36,
-       "text": [
-        "Redditor(user_name='Slay3rKenzie')"
-       ]
-      }
-     ],
-     "prompt_number": 36
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -868,8 +825,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 37
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -880,8 +836,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 38
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -891,8 +846,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 96
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -913,80 +867,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "http://i.imgur.com/2RZps5l.jpg\n",
-        "http://i.imgur.com/Ja7q1B4.jpg"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "http://i.imgur.com/3IwbJqU.jpg"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "http://i.imgur.com/G29vFib.jpg"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "http://i.imgur.com/tJYg1i7.jpg"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "http://i.imgur.com/ysqmLby.jpg"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "http://i.imgur.com/Ri71eMt.jpg"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "http://i.imgur.com/ZZUzVJA.jpg"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "http://i.imgur.com/bj9FYZr.jpg"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
-       ]
-      }
-     ],
-     "prompt_number": 97
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -997,7 +878,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 103
+     "prompt_number": 47
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "basewidth = 600"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 102
     },
     {
      "cell_type": "code",
@@ -1005,7 +897,6 @@
      "input": [
       "for rmglis in os.listdir(rmgzdays):\n",
       "    print rmglis\n",
-      "    im = Image.open(rmglis)\n",
       "    print im.size\n",
       "    apsize.append(im.size)"
      ],
@@ -1016,28 +907,50 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "AwesomePahsome-reference.png\n",
+        "(512, 512)\n",
+        "Livyathan-reference.png\n",
+        "(512, 512)\n",
         "RainyWeathers-reference.png\n",
-        "(400, 435)\n",
+        "(512, 512)\n",
         "makebelievepoet-reference.png\n",
-        "(2625, 1944)\n",
+        "(512, 512)\n",
         "elcielo17-reference.png\n",
-        "(4000, 3000)\n",
+        "(512, 512)\n",
         "pokewneedle-reference.png\n",
-        "(640, 1136)\n",
+        "(512, 512)\n",
+        "airbrush_wizard-reference.png\n",
+        "(512, 512)\n",
         "ChrisTaliaferro-reference.png\n",
-        "(1456, 1456)\n",
+        "(512, 512)\n",
         "TTG_Zebra_Donkey-reference.png\n",
-        "(900, 1200)\n",
+        "(512, 512)\n",
         "Tjalle60-reference.png\n",
-        "(3264, 2448)\n",
+        "(512, 512)\n",
         "Cfar1994-reference.png\n",
-        "(1608, 1208)\n",
+        "(512, 512)\n",
         "HoustonSoda2-reference.png\n",
-        "(640, 640)\n"
+        "(512, 512)\n"
        ]
       }
      ],
-     "prompt_number": 104
+     "prompt_number": 103
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#basewidth = 300\n",
+      "#img = Image.open('somepic.jpg')\n",
+      "#wpercent = (basewidth/float(img.size[0]))\n",
+      "#hsize = int((float(img.size[1])*float(wpercent)))\n",
+      "#img = img.resize((basewidth,hsize), PIL.Image.ANTIALIAS)\n",
+      "#img.save('sompic.jpg')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 106
     },
     {
      "cell_type": "code",
@@ -1057,6 +970,10 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "900\n",
+        "greater than 800\n",
+        "900\n",
+        "greater than 800\n",
         "400\n",
         "less than 800!\n",
         "2625\n",
@@ -1065,6 +982,8 @@
         "greater than 800\n",
         "640\n",
         "less than 800!\n",
+        "1335\n",
+        "greater than 800\n",
         "1456\n",
         "greater than 800\n",
         "900\n",
@@ -1074,11 +993,83 @@
         "1608\n",
         "greater than 800\n",
         "640\n",
+        "less than 800!\n",
+        "900\n",
+        "greater than 800\n",
+        "900\n",
+        "greater than 800\n",
+        "400\n",
+        "less than 800!\n",
+        "2625\n",
+        "greater than 800\n",
+        "4000\n",
+        "greater than 800\n",
+        "640\n",
+        "less than 800!\n",
+        "1335\n",
+        "greater than 800\n",
+        "1456\n",
+        "greater than 800\n",
+        "900\n",
+        "greater than 800\n",
+        "3264\n",
+        "greater than 800\n",
+        "1608\n",
+        "greater than 800\n",
+        "640\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
+        "less than 800!\n",
+        "512\n",
         "less than 800!\n"
        ]
       }
      ],
-     "prompt_number": 109
+     "prompt_number": 107
     },
     {
      "cell_type": "code",
@@ -1086,7 +1077,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 107
     },
     {
      "cell_type": "code",
@@ -1137,7 +1129,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 98
+     "prompt_number": 108
     },
     {
      "cell_type": "code",
@@ -1151,13 +1143,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 205,
+       "prompt_number": 109,
        "text": [
-        "{'title': u'so if anyone has the time and would like a go at drawing me please feel free'}"
+        "{'title': u'Need pics drawn of my 3 kiddos for a gift for my hubby...thanks!!!'}"
        ]
       }
      ],
-     "prompt_number": 205
+     "prompt_number": 109
     },
     {
      "cell_type": "code",
@@ -1168,7 +1160,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 264
+     "prompt_number": 110
     },
     {
      "cell_type": "code",
@@ -1179,7 +1171,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 265
+     "prompt_number": 111
     },
     {
      "cell_type": "code",
@@ -1190,7 +1182,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 266
+     "prompt_number": 112
     },
     {
      "cell_type": "code",
@@ -1201,7 +1193,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 267
+     "prompt_number": 113
     },
     {
      "cell_type": "code",
@@ -1214,7 +1206,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 268
+     "prompt_number": 114
     },
     {
      "cell_type": "code",
@@ -1225,17 +1217,18 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 269
+     "prompt_number": 115
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rsync -azP source destination"
+      "#rsync -azP source destination"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 117
     },
     {
      "cell_type": "code",
@@ -1259,7 +1252,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Update index? Y/nn\n"
+        "Update index? Y/ny\n"
        ]
       },
       {
@@ -1267,11 +1260,10 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Update reference? Y/ny\n"
+        "Update reference? Y/nn\n"
        ]
       }
-     ],
-     "prompt_number": 43
+     ]
     },
     {
      "cell_type": "code",
