--- a/fairfieldlogin.ipynb
+++ b/fairfieldlogin.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:128d044a7f8aeda287fe39fb3ae6fe7af84a7045db305e0f6bf9af3aeead1a29"
+  "signature": "sha256:af437259f1c8a385210c8fffa382d8d0204382f0483562a050d72b7f4d0c6cdc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,8 +31,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import os\n",
-      "import "
+      "import os"
      ],
      "language": "python",
      "metadata": {},
