meta data saved

--- a/fairfieldlogin.ipynb
+++ b/fairfieldlogin.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:af437259f1c8a385210c8fffa382d8d0204382f0483562a050d72b7f4d0c6cdc"
+  "signature": "sha256:7d3811e7d31364533d49fdb57007d0f71af49362a9daa67e77328f72f1eec147"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -36,29 +36,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "os.utime()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "TypeError",
-       "evalue": "utime() takes exactly 2 arguments (0 given)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-3-082bfbc22892>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;31mTypeError\u001b[0m: utime() takes exactly 2 arguments (0 given)"
-       ]
-      }
-     ],
-     "prompt_number": 3
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -92,9 +70,29 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 8,
        "text": [
         "[27, 28, 85, 220, 1000]"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "os.system('rsync -azP /home/wcmckee/motion/ wcmckee@getsdrawn.com:/home/wcmckee/motion/')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "0"
        ]
       }
      ],
@@ -103,9 +101,16 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "os."
-     ],
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
