--- a/GetsDrawnDotCom.ipynb
+++ b/GetsDrawnDotCom.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:48b8014b241771cc31c9902654f883ece972e6f7e26f38cfced19c1c48258411"
+  "signature": "sha256:53155f89432a1a4e41a00d1c0251a8590dee7f49fb7ab7f67bb16bc8e8fbcb7f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -852,7 +852,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#panz()\n",
+      "#panz\n",
       "for rdz in lisrgc:\n",
       "    (rdz.title)\n",
       "    #a(rdz.url)\n",
