replace rand str filename with date

--- a/fairfieldlogin.ipynb
+++ b/fairfieldlogin.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7742fc9dc7ec372dbc1f641bad24988b6b4f20e214109c346ef128b1bba8b756"
+  "signature": "sha256:02422278549a3b1fb5fddb950aab91fc89c02b6fc327dce99110774a1af3460d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -204,9 +204,9 @@
      "collapsed": false,
      "input": [
       "for opfa in opfair:\n",
-      "    print opfa.strip('.ipynb')\n",
       "    opfa.replace(\" \", \"\")\n",
       "    opsrip.append(opfa.strip('.ipynb'))\n",
+      "    print opfa.strip('.ipynb')\n",
       "   # if (' ') in opfa.strip('.ipynb'):\n",
       "    #    print opfa.strip('.ipython')"
      ],
@@ -262,7 +262,7 @@
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
@@ -273,7 +273,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -284,7 +284,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
@@ -297,7 +297,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 49
     },
     {
      "cell_type": "code",
@@ -314,7 +314,7 @@
       "            #    metadict.update({'down': lisz.downs})\n",
       "            #    metadict.update({'title': lisz.title})\n",
       "            #    metadict.update({'created': lisz.created})\n",
-      "            f.write(rstrin + '\\n' + rstrin + '\\n' + endate + entim)"
+      "            f.write(rstrin.strip(' ') + '\\n' + rstrin + '\\n' + endate + entim)"
      ],
      "language": "python",
      "metadata": {},
@@ -355,7 +355,17 @@
         "hamcom\n",
         "Da\n",
         "TK Hello World\n",
-        "korrin990"
+        "korrin990\n",
+        "Sione\n",
+        "helloworld\n",
+        "korr\n",
+        "FRANKEY JOE\n",
+        "lear\n",
+        "aries\n",
+        "a\n",
+        "Aruna\n",
+        "Bruce\n",
+        "Untitled3"
        ]
       },
       {
@@ -363,6 +373,241 @@
        "stream": "stdout",
        "text": [
         "\n",
+        "PeterW\n",
+        "lorence example\n",
+        "zaeus\n",
+        "ldo\n",
+        "Untitled1\n",
+        "Untitled5\n",
+        "Untitled0\n",
+        "StephM\n",
+        "To\n",
+        "korrin99\n",
+        "an-Copy0\n",
+        "test\n",
+        "chanceis\n",
+        "sue\n",
+        "lance\n",
+        "excel\n",
+        "Readme\n",
+        "Dele\n",
+        "John T\n",
+        "Untitled6\n",
+        "ado\n",
+        "lexxuse\n",
+        "william\n",
+        "Alex B\n",
+        "adon909\n",
+        "toara\n",
+        "ocean connor\n",
+        "Alex \n",
+        "hamcom\n",
+        "Da\n",
+        "TK Hello World\n",
+        "korrin990\n",
+        "Sione\n",
+        "helloworld\n",
+        "korr\n",
+        "FRANKEY JOE\n",
+        "lear\n",
+        "aries\n",
+        "a\n",
+        "Aruna\n",
+        "Bruce\n",
+        "Untitled3"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "PeterW\n",
+        "lorence example\n",
+        "zaeus\n",
+        "ldo\n",
+        "Untitled1\n",
+        "Untitled5\n",
+        "Untitled0\n",
+        "StephM\n",
+        "To\n",
+        "korrin99\n",
+        "an-Copy0\n",
+        "test\n",
+        "chanceis\n",
+        "sue\n",
+        "lance\n",
+        "excel\n",
+        "Readme\n",
+        "Dele\n",
+        "John T\n",
+        "Untitled6\n",
+        "ado\n",
+        "lexxuse\n",
+        "william\n",
+        "Alex B\n",
+        "adon909\n",
+        "toara\n",
+        "ocean connor\n",
+        "Alex \n",
+        "hamcom\n",
+        "Da\n",
+        "TK Hello World\n",
+        "korrin990\n",
+        "Sione\n",
+        "helloworld\n",
+        "korr\n",
+        "FRANKEY JOE\n",
+        "lear\n",
+        "aries\n",
+        "a"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Aruna\n",
+        "Bruce\n",
+        "Untitled3\n",
+        "PeterW\n",
+        "lorence example\n",
+        "zaeus\n",
+        "ldo\n",
+        "Untitled1\n",
+        "Untitled5\n",
+        "Untitled0\n",
+        "StephM\n",
+        "To\n",
+        "korrin99\n",
+        "an-Copy0\n",
+        "test\n",
+        "chanceis\n",
+        "sue\n",
+        "lance\n",
+        "excel\n",
+        "Readme\n",
+        "Dele\n",
+        "John T\n",
+        "Untitled6\n",
+        "ado\n",
+        "lexxuse\n",
+        "william\n",
+        "Alex B\n",
+        "adon909\n",
+        "toara\n",
+        "ocean connor\n",
+        "Alex \n",
+        "hamcom"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Da\n",
+        "TK Hello World\n",
+        "korrin990\n",
+        "Sione\n",
+        "helloworld\n",
+        "korr\n",
+        "FRANKEY JOE\n",
+        "lear\n",
+        "aries\n",
+        "a\n",
+        "Aruna\n",
+        "Bruce\n",
+        "Untitled3\n",
+        "PeterW\n",
+        "lorence example\n",
+        "zaeus\n",
+        "ldo\n",
+        "Untitled1\n",
+        "Untitled5\n",
+        "Untitled0\n",
+        "StephM\n",
+        "To\n",
+        "korrin99\n",
+        "an-Copy0\n",
+        "test\n",
+        "chanceis\n",
+        "sue\n",
+        "lance\n",
+        "excel\n",
+        "Readme\n",
+        "Dele\n",
+        "John T\n",
+        "Untitled6\n",
+        "ado\n",
+        "lexxuse\n",
+        "william\n",
+        "Alex B"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "adon909\n",
+        "toara\n",
+        "ocean connor\n",
+        "Alex \n",
+        "hamcom\n",
+        "Da\n",
+        "TK Hello World\n",
+        "korrin990\n",
+        "Sione\n",
+        "helloworld\n",
+        "korr\n",
+        "FRANKEY JOE\n",
+        "lear\n",
+        "aries\n",
+        "a\n",
+        "Aruna\n",
+        "Bruce\n",
+        "Untitled3\n",
+        "PeterW\n",
+        "lorence example\n",
+        "zaeus\n",
+        "ldo\n",
+        "Untitled1\n",
+        "Untitled5\n",
+        "Untitled0\n",
+        "StephM\n",
+        "To\n",
+        "korrin99\n",
+        "an-Copy0\n",
+        "test\n",
+        "chanceis\n",
+        "sue\n",
+        "lance\n",
+        "excel\n",
+        "Readme\n",
+        "Dele\n",
+        "John T\n",
+        "Untitled6\n",
+        "ado\n",
+        "lexxuse"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "william\n",
+        "Alex B\n",
+        "adon909\n",
+        "toara\n",
+        "ocean connor\n",
+        "Alex \n",
+        "hamcom\n",
+        "Da\n",
+        "TK Hello World\n",
+        "korrin990\n",
         "Sione\n",
         "helloworld\n",
         "korr\n",
@@ -375,7 +620,7 @@
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 53
     },
     {
      "cell_type": "code",
@@ -386,7 +631,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
@@ -397,7 +642,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
+     "prompt_number": 55
     },
     {
      "cell_type": "code",
@@ -411,13 +656,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 36,
+       "prompt_number": 56,
        "text": [
-        "0"
+        "768"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 56
     },
     {
      "cell_type": "code",
