--- a/whaiout.ipynb
+++ b/whaiout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:213fddf9152ce077d4fc6b6d17de38bcf68c75d1248c5f9d16542e5ec71d4c3e"
+  "signature": "sha256:04561a9531fdf8bae85b6210defb0a1ace060642316a5e28caf33a5a8c5450e1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,12 +12,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This is the signout script that opens the xl file and fill in signout info.\n",
+      "<h3>WhaiOut</h3>\n",
+      "\n",
+      "This is the signout script that opens the login file and fills in signout info.\n",
       "\n",
       "Opens up list of signin data. This is date of sign in, time, name, and reason.\n",
       "This is .meta. This script appends sign out data. This is signout date, signout time, and comments.\n",
       "\n",
       "8 urandom 128 keys are generated. Used these in saving the achieve, as .html, and .meta files.\n",
+      "Why not save as yr-month-day-hr-min.meta /html\n",
+      "\n",
+      "Turn it into a Nikola blog. Three blog posts. login (whaxlu.py), logout (whaiout.py), and the result of both of them. Perhaps it\n",
       "\n",
       "creates date and time mark and asks for comment"
      ]
@@ -83,7 +88,7 @@
        "output_type": "pyout",
        "prompt_number": 4,
        "text": [
-        "'{\"signin hrmin\": \"15:09:51\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"sunny and mum is back\", \"lastname\": \"Mckee\", \"signin date\": \"02-Dec-2014\"}{\"signin-date\": \"09-Dec-2014\", \"reason\": \"esw\", \"signin-comment\": \"checking this on the bus\", \"last-name\": \"mckee\", \"signin-hrmin\": \"08:30:54\"}'"
+        "'{\"signin hrmin\": \"18:14:35\", \"reason\": \"ESW\", \"firstname\": \"William\", \"signin comment\": \"testing locally\", \"lastname\": \"Mckee\", \"signin date\": \"07-Jan-2015\"}'"
        ]
       }
      ],
@@ -131,18 +136,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'swlis' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-7-4f71789a25a2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mswl\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mswlis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mswl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mvalis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mswl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'swlis' is not defined"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 7
     },
     {
@@ -390,27 +384,45 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "trsor"
+      "from time import strftime, gmtime"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 83,
-       "text": [
-        "'413c61c9654e'"
-       ]
-      }
-     ],
-     "prompt_number": 83
+     "outputs": [],
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "optrd = open('/home/wcmckee/visignsys/posts/' + trsor + '.meta', 'w')\n",
+      "yearz = strftime(\"%y\", gmtime())\n",
+      "monthz = strftime(\"%m\", gmtime())\n",
+      "dayz = strftime(\"%d\", gmtime())\n",
+      "\n",
+      "hurz = strftime(\"%H\", gmtime())\n",
+      "minz = strftime(\"%M\", gmtime())\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "dform = (yearz + monthz + dayz +hurz + minz)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "optrd = open('/home/wcmckee/visignsys/posts/' + dform + '.meta', 'w')\n",
       "optrd.write(oplsav)\n",
       "optrd.close()"
      ],
@@ -423,7 +435,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "jsnrd = open('/home/wcmckee/visignsys/posts/' + trsor + '.json', 'w')\n",
+      "jsnrd = open('/home/wcmckee/visignsys/posts/' + dform + '.json', 'w')\n",
       "jsnrd.write(oplsav)\n",
       "jsnrd.close()"
      ],
